[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ex = "0.1"
chrono = "0.4"
chrono-tz = "0.8"
http_req = {version="0.9",features=["rust-tls"],default-features=false}